[gd_scene load_steps=2 format=3 uid="uid://cbbwnq2dekfve"]

[ext_resource type="Script" path="res://Client/MainClient.gd" id="1_j4viu"]

[node name="MainClient" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_j4viu")

[node name="MainMenu" type="Panel" parent="."]
layout_mode = 0
offset_right = 384.0
offset_bottom = 128.0

[node name="Label" type="Label" parent="MainMenu"]
layout_mode = 0
offset_left = 32.0
offset_top = 16.0
offset_right = 352.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 20
text = "Connect to Server:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConnectHost" type="LineEdit" parent="MainMenu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 16.0
offset_top = 64.0
offset_right = 184.0
offset_bottom = 104.0
text = "127.0.0.1"
placeholder_text = "Hostname"

[node name="ConnectPort" type="LineEdit" parent="MainMenu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 200.0
offset_top = 64.0
offset_right = 267.063
offset_bottom = 104.0
text = "8080"
placeholder_text = "Port"
alignment = 1

[node name="Button" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 280.0
offset_top = 64.0
offset_right = 369.0
offset_bottom = 104.0
text = "CONNECT"

[connection signal="pressed" from="MainMenu/Button" to="." method="_on_button_pressed"]
